# cakesync

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_parse_birthday.py
