[project]
name = "cakesync"
version = "0.1.0"
description = "Stateless sync of contact birthdays from any CardDAV address book into a Todoist project, as yearly recurring tasks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["todoist", "carddav", "birthday", "contacts", "sync", "fastmail", "icloud", "nextcloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "vobject>=0.9.9",
    "python-dotenv>=1.0",
]

[project.urls]
Repository = "https://github.com/alxbd/cakesync"
Issues = "https://github.com/alxbd/cakesync/issues"

[project.scripts]
cakesync = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.hatch.build.targets.sdist]
include = ["main.py", "README.md", "LICENSE", "pyproject.toml", "tests"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
include = ["main.py", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
